# zk-pref-matching

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
