[package]
name = "matcher-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
risc0-zkp = { version = "0.14", default-features = false }
risc0-zkvm = { version = "0.14.0", default-features = false, features = [
    "std",
] }